index.html updated

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Fylo</title>
   <link rel="stylesheet" href="./assets/styles/custom.css">
   <link rel="stylesheet" href="./assets/styles/reset.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+  <link rel="shortcut icon" href="./assets/images/favicon-32x32.png">
 </head>
 <body>
 <header>
@@ -20,28 +22,130 @@
     <img class="intro-image" src="./assets/images/illustration-intro.png" alt="intro-image">
     <div class="intro-texto">
         <p class="p-1">All your files in one secure location,</p>
+        <img class="background-img" src="./assets/images/bg-curvy-desktop.svg" alt="background-img">
         <p class="p-2">accessible anywhere.</p>
-        <p class="p-3">Fylo stores all your most important files in one secure location.</p>
-        <p class="p-4">Access them wherever you need, share and collaborate with</p>
-        <p class="p-5">friends family, and co-workers.</p>
+        <p class="p-3">
+            Fylo stores all your most important files in one secure location.<br>Access them wherever you need, share and collaborate with<br>friends family, and co-workers.
+        </p>
     </div>
-    <button class="get-started">
-        Get Started
+    <button class="botao-get">
+        <a class="get-started" href="">Get Started</a>
     </button>
 </section>
 <section class="section-2">
     <div class="access-anywhere">
         <img class="access-anywhere-img" src="./assets/images/icon-access-anywhere.svg" alt="access-anywhere-img">
-        <p class="p-6">Access your files, anywhere</p>
-        <p class="p-7">
-            The ability to use a smartphone, tablet, or computer<br>to access your account means your files follow you
+        <p class="p-4">Access your files, anywhere</p>
+        <p class="p-5">
+            The ability to use a smartphone, tablet, or computer<br>to access your account means your files follow you<br>everywhere.
         </p>
-        <p class="p-8">everywhere.</p>
     </div>
     <div class="security">
         <img class="security-img" src="./assets/images/icon-security.svg" alt="security-img">
-        <p class="p-9">Security you can trust</p>
+        <p class="p-6">Security you can trust</p>
+        <p class="p-7">
+            2-factor authentication and user-controlled encryption are<br>just a couple of the security features we allow to help<br>secure your files.
+        </p>
     </div>
-</section> 
+    <div class="real-time">
+        <img class="real-time-img" src="./assets/images/icon-collaboration.svg" alt="real-time-img">
+        <p class="p-8">Real-time collaboration</p>
+        <p class="p-9">
+            Securely share files and folders with friends, family and<br>colleagues for live collaboration. No email attachments<br>required.
+        </p>
+    </div>
+    <div class="store">
+        <img class="store-img" src="./assets/images/icon-any-file.svg" alt="store-img">
+        <p class="p-10">Store any type of file</p>
+        <p class="p-11">
+            Whether you're sharing holidays photos or work<br>documents, Fylo has you covered allowing for all file<br>types to be securely stored and shared.
+        </p>
+    </div>
+</section>
+<section class="section-3">
+    <img class="stay-img" src="./assets/images/illustration-stay-productive.png" alt="stay-img">
+    <div class="stay">
+        <p class="p-12">
+            Stay productive,<br>wherever you are
+        </p>
+        <p class="p-13">
+            Never let location be an issue when accessing your files. Fylo has you<br>covered for all of your file storage needs
+        </p>
+        <p class="p-14">
+            Securely share files and folders with friends, family and colleagues for live<br>collaboration. No email attachments required.
+        </p>
+        <a class="botao-see" href="">See how Fylo works <img class="arrow" src="./assets/images/icon-arrow.svg" alt="arrow"></a>
+    </div>
+</section>
+<section class="section-4">
+    <img class="aspas" src="./assets/images/bg-quotes.png" alt="aspas">
+    <div class="profile-1">
+        <p class="texto-profile-1">
+            Fylo has improved our team productivity by<br>an order of magnitude. Since making the<br>switch our team has become a well-oiled<br>collaboration machine.
+        </p>
+        <img class="img-profile-1" src="./assets/images/profile-1.jpg" alt="img-profile-1">
+        <p class="p-15">Satish Patel</p>
+        <p class="p-16">Founder & CEO, Huddle</p>
+    </div>
+    <div class="profile-2">
+        <p class="texto-profile-2">
+            Fylo has improved our team productivity by<br>an order of magnitude. Since making the<br>switch our team has become a well-oiled<br>collaboration machine.
+        </p>
+        <img class="img-profile-2" src="./assets/images/profile-2.jpg" alt="img-profile-2">
+        <p class="p-17">Bruce McKenzie</p>
+        <p class="p-18">Founder & CEO, Huddle</p>
+    </div>
+    <div class="profile-3">
+        <p class="texto-profile-3">
+            Fylo has improved our team productivity by<br>an order of magnitude. Since making the<br>switch our team has become a well-oiled<br>collaboration machine.
+        </p>
+        <img class="img-profile-3" src="./assets/images/profile-3.jpg" alt="img-profile-3">
+        <p class="p-19">Iva Boyd</p>
+        <p class="p-20">Founder & CEO, Huddle</p>
+    </div>
+    <div class="get-early">
+        <p class="p-21">Get early access today</p>
+        <p class="p-22">
+            It only takes a minute to sign up and our free starter tier is extremely generous. If you have any<br>questions, our support team would be happy to help you.
+        </p>
+        <div class="form-e-botao">
+            <form action="">
+                <label class="descricao-form" for="email">email@example.com</label>
+                <input class="input-form" id="email" type="text" name="email">
+                <input class="botao-form" type="submit" value="Get Started For Free">
+            </form>
+        </div>
+    </div>
+</section>
+<footer>
+    <div class="logo-e-texto">
+        <img class="logo-2" src="./assets/images/logo.svg" alt="logo-2">
+        <img class="location-img" src="./assets/images/icon-location.svg" alt="location-img">
+        <p class="p-23">
+            Lorem ipsum dolor sit amet, consectetur<br>adipiscing elit, sed do eiusmod tempor<br>incididunt ut labore et dolore magna aliqua
+        </p>
+    </div>
+    <div class="numero-email">
+        <img class="numero-img" src="./assets/images/icon-phone.svg" alt="numero-img">
+        <p class="numero">+1-543-123-4567</p>
+        <img class="email-img" src="./assets/images/icon-email.svg" alt="email-img">
+        <p class="email">example@fylo.com</p>
+    </div>
+    <div class="about-us">
+        <p class="p-24">
+            About Us<br>Jobs<br>Press<br>Blog
+        </p>
+    </div>
+    <div class="contact-us">
+        <p class="p-25">
+            Contact Us<br>Terms<br>Privacy
+        </p>
+    </div>
+    <div class="icones">
+        <i class="fab fa-facebook"></i>
+        <i class="fab fa-twitter"></i>
+        <i class="fab fa-instagram"></i>
+    </div>
+</footer> 
 </body>
 </html>
